// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TopBarStats > renders CPU and RAM 1`] = `
<div>
  <div
    class="flex items-center gap-2 text-xs font-medium tabular-nums text-muted-text"
  >
    <span
      class="transition-colors duration-500 text-emerald-500"
    >
      45
      <span
        class="text-muted-text ml-0.5"
      >
        cpu
      </span>
    </span>
    <span
      class="text-main-border"
    >
      ·
    </span>
    <span
      class="transition-colors duration-500 text-amber-500"
    >
      4.2
      <span
        class="text-muted-text ml-0.5"
      >
        ram
      </span>
    </span>
    <span
      class="text-muted-text"
    >
      off
    </span>
  </div>
</div>
`;

exports[`TopBarStats > renders while model loading 1`] = `
<div>
  <div
    class="flex items-center gap-2 text-xs font-medium tabular-nums text-muted-text"
  >
    <span
      class="transition-colors duration-500 text-emerald-500"
    >
      10
      <span
        class="text-muted-text ml-0.5"
      >
        cpu
      </span>
    </span>
    <span
      class="text-main-border"
    >
      ·
    </span>
    <span
      class="transition-colors duration-500 text-emerald-500"
    >
      1
      <span
        class="text-muted-text ml-0.5"
      >
        ram
      </span>
    </span>
    <span
      class="text-main-border"
    >
      ·
    </span>
    <span
      class="transition-colors duration-500 text-amber-500"
    >
      HIGH
    </span>
    <span
      class="transition-colors duration-500 text-muted-text"
    >
      CLIP
    </span>
    <span
      class="transition-colors duration-500 text-amber-500"
    >
      LD
    </span>
  </div>
</div>
`;

exports[`TopBarStats > renders with AI enabled and ready 1`] = `
<div>
  <div
    class="flex items-center gap-2 text-xs font-medium tabular-nums text-muted-text"
  >
    <span
      class="transition-colors duration-500 text-emerald-500"
    >
      30
      <span
        class="text-muted-text ml-0.5"
      >
        cpu
      </span>
    </span>
    <span
      class="text-main-border"
    >
      ·
    </span>
    <span
      class="transition-colors duration-500 text-amber-500"
    >
      3
      <span
        class="text-muted-text ml-0.5"
      >
        ram
      </span>
    </span>
    <span
      class="text-main-border"
    >
      ·
    </span>
    <span
      class="transition-colors duration-500 text-emerald-500"
    >
      SHARP
    </span>
    <span
      class="transition-colors duration-500 text-muted-text"
    >
      CLIP
    </span>
    <span
      class="transition-colors duration-500 text-emerald-500"
    >
      ON
    </span>
  </div>
</div>
`;

exports[`TopBarStats > renders with aesthetic enabled 1`] = `
<div>
  <div
    class="flex items-center gap-2 text-xs font-medium tabular-nums text-muted-text"
  >
    <span
      class="transition-colors duration-500 text-emerald-500"
    >
      40
      <span
        class="text-muted-text ml-0.5"
      >
        cpu
      </span>
    </span>
    <span
      class="text-main-border"
    >
      ·
    </span>
    <span
      class="transition-colors duration-500 text-amber-500"
    >
      4
      <span
        class="text-muted-text ml-0.5"
      >
        ram
      </span>
    </span>
    <span
      class="text-main-border"
    >
      ·
    </span>
    <span
      class="transition-colors duration-500 text-emerald-500"
    >
      STANDARD
    </span>
    <span
      class="transition-colors duration-500 text-sky-500"
    >
      FSW
    </span>
    <span
      class="transition-colors duration-500 text-emerald-500"
    >
      ON
    </span>
  </div>
</div>
`;

exports[`TopBarStats > renders with high CPU (red) 1`] = `
<div>
  <div
    class="flex items-center gap-2 text-xs font-medium tabular-nums text-muted-text"
  >
    <span
      class="transition-colors duration-500 text-rose-500"
    >
      92
      <span
        class="text-muted-text ml-0.5"
      >
        cpu
      </span>
    </span>
    <span
      class="text-main-border"
    >
      ·
    </span>
    <span
      class="transition-colors duration-500 text-amber-500"
    >
      5
      <span
        class="text-muted-text ml-0.5"
      >
        ram
      </span>
    </span>
    <span
      class="text-muted-text"
    >
      off
    </span>
  </div>
</div>
`;
